--- a/app/src/main/res/layout/activity_more_details.xml
+++ b/app/src/main/res/layout/activity_more_details.xml
@@ -27,47 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/orderdate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:gravity="center|left"
-                android:paddingLeft="15dp"
-                android:text="Date order">
-
-            </TextView>
-
-
-
-            <LinearLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/spacing_middle"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Description"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:textColor="@color/grey_90" />
-
-
-
-
-
-
-            </LinearLayout>
-
-
-        </LinearLayout>
     </LinearLayout>
 
 
@@ -78,6 +38,7 @@
         android:layout_marginTop="300dp"
         android:scrollbars="none"
         android:scrollingCache="true"
+        android:visibility="visible"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,12 +57,14 @@
                 android:layout_height="1000dp"
                 android:layout_margin="10dp"
                 android:elevation="12dp"
+                app:cardBackgroundColor="@color/overlay_light_80"
                 app:cardCornerRadius="20dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+
                     android:layout_marginTop="20dp">
 
 
@@ -214,11 +177,54 @@
 
 
                                 </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/orderdate"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginBottom="5dp"
+                                    android:gravity="center|left"
+                                    android:paddingLeft="15dp"
+                                    android:text="Date order">
+
+                                </TextView>
+
+
+
+                                <LinearLayout
+
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="@dimen/spacing_middle"
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Description"
+                                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                                        android:textColor="@color/grey_90" />
+
+
+
+
+
+
+                                </LinearLayout>
+
+
+                            </LinearLayout>
                             <TextView
                                 android:id="@+id/deatils"
+                                android:layout_margin="5dp"
+                                android:padding="5dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/spacing_medium"
+
                                 android:text="About this item
 6.1-inch Super Retina XDR display
 Ceramic Shield, tougher than any smartphone glass
