--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,10 +7,123 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.ReportFragment">
 
+ <androidx.cardview.widget.CardView
+     android:layout_width="match_parent"
+     android:layout_height="400dp"
+     android:layout_margin="10dp"
+     android:visibility="gone"
+     android:id="@+id/ProByRpoCard"
+     android:elevation="12dp"
+     app:cardCornerRadius="20dp"
+     app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
+     app:layout_constraintEnd_toEndOf="parent"
+     app:layout_constraintStart_toStartOf="parent">
+
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      android:layout_marginTop="20dp">
+
+
+   <ImageView
+       android:id="@+id/ProByRepoClose"
+       android:layout_width="wrap_content"
+       android:layout_marginRight="12dp"
+       android:layout_height="wrap_content"
+       android:background="@drawable/ic_baseline_cancel_24"
+       android:layout_gravity="right"
+       android:text="Close" />
+
+   <ImageView
+       android:src="@drawable/ii"
+       android:layout_width="match_parent"
+       android:layout_height="200dp"
+       android:id="@+id/ProByRpoImage">
+
+   </ImageView>
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+     <TextView
+         android:id="@+id/ProByRpoTitle"
+         android:layout_width="wrap_content"
+         android:layout_height="match_parent"
+         android:layout_weight="1"
+         android:gravity="center|left"
+         android:paddingLeft="12dp"
+         android:text="iphone 12"
+         android:textSize="20sp"
+         android:textStyle="bold">
+
+     </TextView>
+
+
+    </LinearLayout>
+    <TextView
+        android:id="@+id/ProByRpoDeatils"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_medium"
+        android:text="About this item
+6.1-inch Super Retina XDR display
+Ceramic Shield, tougher than any smartphone glass
+A14 Bionic chip, the fastest chip ever in a smartphone
+Advanced dual-camera system with 12MP Ultra Wide and"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/grey_60" />
+
+   </LinearLayout>
+
+
+
+
+
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_marginLeft="@dimen/spacing_xmedium"
+       android:layout_marginRight="@dimen/spacing_xmedium"
+       android:orientation="horizontal">
+
+
+
+   </LinearLayout>
+
+
+
+   <LinearLayout
+       android:id="@+id/rating_linear_t3"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"/>
+   <LinearLayout
+       android:id="@+id/rating_linear"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"/><![CDATA[
+
+
+   />
+
+  ]]>
+  </LinearLayout>
+ </androidx.cardview.widget.CardView>
+
  <LinearLayout
+     android:id="@+id/linearLayout5"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
-  android:orientation="vertical">
+     android:orientation="vertical">
+
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
       android:layout_width="match_parent"
@@ -23,17 +136,17 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       app:layout_scrollFlags="scroll|enterAlways"
-      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
+       android:layout_margin="15dp"
        android:clipToPadding="false"
+       android:visibility="visible"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="8dp"
-       android:layout_margin="15dp"
-       android:visibility="visible"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
@@ -60,20 +173,20 @@
      <requestFocus />
 
 
-
-
-
     </LinearLayout>
 
    </androidx.cardview.widget.CardView>
   </androidx.appcompat.widget.Toolbar>
+
   <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/report_recycler_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/report_recycler_view">
-  </androidx.recyclerview.widget.RecyclerView>
+      android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+
 
  </LinearLayout>
 
 
-</LinearLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
