--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-
+android:orientation="vertical"
+    android:background="@color/colorWhite"
     tools:context=".Splash.Splash">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
 
 
-        <ImageView
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/amipay"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="@+id/lyt_parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.454"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/lyt_parent"
+            app:layout_constraintVertical_bias="0.22000003"
+            app:lottie_autoPlay="true"
+            app:lottie_rawRes="@raw/splashshoping" />
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/splash">
+            android:layout_height="50dp"
+                android:text="Y S T O R E"
+                android:textStyle="bold"
+                android:textColor="@color/amber_400"
+                android:textSize="30sp"
+                android:gravity="center">
 
-        </ImageView>
-
-
-    </LinearLayout>
-
-
+        </TextView>
 
 
 
@@ -42,4 +49,9 @@
 
 
 
-</RelativeLayout>
+
+
+
+
+
+</LinearLayout>
