--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -35,7 +35,31 @@
             android:layout_height="match_parent"
             android:background="@color/colorGrey"
             android:orientation="vertical">
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="77dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/bottom_raduse"
+                app:contentInsetStartWithNavigation="0dp"
+                app:layout_constraintBottom_toTopOf="@+id/products_rec"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Dashboard"
+                    android:textSize="20sp"
+                    android:textColor="@color/colorWhite"
+                    android:gravity="center"
+                    android:textStyle="bold">
 
+                </TextView>
+            </androidx.appcompat.widget.Toolbar>
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
@@ -182,8 +206,16 @@
                             android:layout_weight="3"
                             android:indeterminate="false"
                             android:max="100"
-                            android:progress="34"
+                            android:progress="20"
                             android:progressDrawable="@drawable/progressbar_orange_round" />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="0.5"
+                            android:layout_height="match_parent"
+                            android:text="20"
+                            android:gravity="center">
+
+                        </TextView>
                     </LinearLayout>
 
                     <LinearLayout
@@ -211,8 +243,16 @@
                             android:layout_weight="3"
                             android:indeterminate="false"
                             android:max="100"
-                            android:progress="90"
+                            android:progress="15"
                             android:progressDrawable="@drawable/progressbar_orange_round2" />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="0.5"
+                            android:layout_height="match_parent"
+                            android:text="15"
+                            android:gravity="center">
+
+                        </TextView>
                     </LinearLayout>
 
                     <LinearLayout
@@ -240,8 +280,16 @@
                             android:layout_weight="3"
                             android:indeterminate="false"
                             android:max="100"
-                            android:progress="40"
+                            android:progress="4"
                             android:progressDrawable="@drawable/progressbar_orange_round3" />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="0.5"
+                            android:layout_height="match_parent"
+                            android:text="4"
+                            android:gravity="center">
+
+                        </TextView>
                     </LinearLayout>
 
                     <View
