--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -8,38 +8,40 @@
     tools:context=".Fragments.ReportFragment">
 
  <androidx.cardview.widget.CardView
+     android:id="@+id/ProByRpoCard"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:layout_margin="10dp"
-     android:visibility="gone"
-     android:id="@+id/ProByRpoCard"
      android:elevation="12dp"
+     android:visibility="gone"
      app:cardCornerRadius="20dp"
      app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
      app:layout_constraintEnd_toEndOf="parent"
-     app:layout_constraintStart_toStartOf="parent">
+     app:layout_constraintStart_toStartOf="parent"
+     app:layout_constraintTop_toTopOf="parent"
+     app:layout_constraintVertical_bias="1.0">
 
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:layout_marginTop="20dp">
+      android:layout_marginTop="20dp"
+      android:orientation="vertical">
 
 
    <ImageView
        android:id="@+id/ProByRepoClose"
        android:layout_width="wrap_content"
-       android:layout_marginRight="12dp"
        android:layout_height="wrap_content"
-       android:background="@drawable/ic_baseline_cancel_24"
        android:layout_gravity="right"
+       android:layout_marginRight="12dp"
+       android:background="@drawable/ic_baseline_cancel_24"
        android:text="Close" />
 
    <ImageView
-       android:src="@drawable/ii"
+       android:id="@+id/ProByRpoImage"
        android:layout_width="match_parent"
-       android:layout_height="200dp"
-       android:id="@+id/ProByRpoImage">
+       android:layout_height="159dp"
+       android:src="@drawable/ii">
 
    </ImageView>
 
@@ -68,11 +70,13 @@
 
 
     </LinearLayout>
+
     <TextView
         android:id="@+id/ProByRpoDeatils"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_medium"
+        android:padding="8dp"
         android:text="About this item
 6.1-inch Super Retina XDR display
 Ceramic Shield, tougher than any smartphone glass
@@ -81,35 +85,39 @@ Advanced dual-camera system with 12MP Ultra Wide and"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/grey_60" />
 
+    <Button
+        android:id="@+id/pause_btn"
+        android:background="@color/red"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Freezing">
+
+    </Button>
+    <Button
+        android:id="@+id/enable_btn"
+        android:visibility="gone"
+        android:background="@color/teal_A400"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Active">
+
+    </Button>
+
+
    </LinearLayout>
-
-
-
-
-
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginLeft="@dimen/spacing_xmedium"
-       android:layout_marginRight="@dimen/spacing_xmedium"
-       android:orientation="horizontal">
-
-
-
-   </LinearLayout>
-
 
 
    <LinearLayout
        android:id="@+id/rating_linear_t3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:orientation="vertical"/>
+       android:orientation="vertical" />
+
    <LinearLayout
        android:id="@+id/rating_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:orientation="horizontal"/><![CDATA[
+       android:orientation="horizontal" /><![CDATA[
 
 
    />
@@ -176,12 +184,53 @@ Advanced dual-camera system with 12MP Ultra Wide and"
     </LinearLayout>
 
    </androidx.cardview.widget.CardView>
-  </androidx.appcompat.widget.Toolbar>
 
+  </androidx.appcompat.widget.Toolbar>
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:gravity="center"
+      android:background="@color/amber_400"
+      android:orientation="horizontal">
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="match_parent"
+       android:layout_weight="1"
+       android:gravity="center"
+
+       android:padding="5dp"
+       android:textStyle="bold"
+       android:text="Report id">
+
+   </TextView>
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="match_parent"
+       android:layout_weight="1"
+       android:gravity="center"
+       android:padding="5dp"
+       android:textStyle="bold"
+       android:text="user id">
+
+   </TextView>
+   <TextView
+       android:layout_width="0dp"
+       android:layout_height="match_parent"
+       android:layout_weight="1"
+       android:gravity="center"
+       android:padding="5dp"
+
+       android:textStyle="bold"
+       android:text="Resone">
+
+   </TextView>
+  </LinearLayout>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/report_recycler_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
+      android:layout_height="match_parent">
+
+  </androidx.recyclerview.widget.RecyclerView>
 
 
  </LinearLayout>
